test/types/tuple/errors/returnWrongSize.good
returnWrongSize.chpl:1: In function 'foo':
returnWrongSize.chpl:3: error: tuple size mismatch (expected 3, got 2)
returnWrongSize.chpl:3: error: illegal use of function that does not return a value: '_cast'
  returnWrongSize.chpl:8: called as foo(param small = true)
